--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mldangelo.com",
+  "name": "sourabhmadur.com",
   "homepage": "https://sourabhmadur.github.io",
   "version": "1.0.1",
   "private": true,
